CU7 Solicitar ubicaion funcional, faltan la implementacion ante el posible error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
 
     <!--CONEXION DIALOG FLOW-->
     <string name="DIALOGFLOW_NAME_PROJECT">detector-de-billetes-vtnl</string>
+
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyALnVdK51wX_xFlKx5lDxZHxkrr-wdm9Aw</string>
 </resources>
