CU9 Realizar calculo implementado con Gemini IA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,11 @@
     <!--CONEXION DIALOG FLOW-->
     <string name="DIALOGFLOW_NAME_PROJECT">detector-de-billetes-vtnl</string>
 
+    <!--CONEXION GOOGLE MAPS-->
     <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyALnVdK51wX_xFlKx5lDxZHxkrr-wdm9Aw</string>
+
+    <!--CONEXION GEMINI IA-->
+    <string name="Url_API_GeminiIA">https://generativelanguage.googleapis.com/</string>
+    <string name="API_GEMINI_IA">AIzaSyDHoVrUXtuWLLVFHDlS8xumQFjL-_TS_Dg</string>
+
 </resources>
